# beaver

./: .actionignore  .env.example  .env.hive.example  .eslintrc.cjs  .gitignore  .golangci.bck.yml  .golangci.yml  .npmrc  .prettierrc.json  AGENTS.md  API_SPECIFICATION.md  CHART_TYPES.md  CLAUDE.md  INTEGRATION_TEST_MIGRATION.md  ISSUE_282_SERVICE_WORKER_RESEARCH.md  MOCK_IMPLEMENTATION_STRATEGY.md  MOCK_IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TAILWIND_V4_UPGRADE_PLAN.md  _config.yml  action.yml  artifact.tar  astro.config.mjs  beaver.yml  beaver.yml.example  category-mapping.json  code-coverage-analysis-report.md  codecov.yml  coverage-report.html  coverage_config_report.html  debug-settings.html  development-strategy.html  docs.config.ts  eslint.config.js  go.mod  go.sum  index.html  index.md  issues-summary.html  (+11 more)
.git-hooks/: pre-commit
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: beaver.yml  ci-backup.yml  ci.yml  claude.yml  codeql.yml  coverage-dashboard.yml  dependency-review.yml  dependency-update.yml  deploy.yml  docs-deployment.yml  integration-tests.yml  integration.yml  main.yml  release-old.yml  release-simplified.yml  release.yml  test-action.yml  update-data.yml  wiki-update.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  design_patterns_guidelines.md  development_commands.md  project_overview.md  system_commands.md  task_completion_workflow.md
_includes/: analytics.html  head.html
_layouts/: default.html  page.html
assets/css/: style.css  style.scss
assets/js/: main.js
cmd/beaver/: analyze.go  analyze_patterns_test.go  analyze_test.go  astro.go  astro_test.go  categorize_issue_tdd_test.go  classification_mock_test.go  classify.go  classify_test.go  commands_test.go  coverage.go  doctor.go  fetch.go  fetch_test.go  generate.go  generate_test.go  generate_troubleshooting_test.go  github_mock_test.go  github_service_mock_test.go  integration_test.go  main.go  main_build_test.go  main_command_test.go  main_error_test.go  main_execution_test.go  main_status_test.go  main_test.go  main_workflow_test.go  pages.go  pages_test.go  site.go  site_test.go  summarize.go  summarize_cmd_test.go  summarize_mock_test.go  summarize_output_test.go  summarize_test.go  test_helpers.go  test_helpers_test.go  utils_test.go  (+3 more)
config/: build-config.yml  ci-config.yml  classification-rules.yaml  classification.yml  deployment-config.yml
docs/: API_SPECIFICATION.md  INTEGRATION_TESTING.md  README.md  architecture.md  ci-script-architecture.md  configuration.md  deployment.md  features.md  github-actions-automation.md  github-integration.md  github-token-guide.md  index.html  local-development.md  phase2-architecture.md  product-overview.md  security.md  setup-guide.md  troubleshooting.md  wiki-automation.md  wiki-setup.md  workflow-optimization.md
docs/issues/: index.html
examples/: github-pages-coverage.html
frontend/astro/: .eslintrc.json  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
internal/ai/: client.go  client_test.go  converter.go  converter_test.go  models.go  models_test.go
internal/config/: config.go  config_test.go  github_pages_config_test.go
internal/errors/: errors.go  errors_enhanced_test.go  errors_test.go
internal/logger/: logger.go  logger_test.go
internal/models/: issue.go  issue_test.go
old-html/: learning-path.html
pkg/actions/: incremental.go  incremental_test.go  metadata.go  notifications.go  notifications_test.go
pkg/analytics/: ai_service.go  ai_service_test.go  development_strategy.go  development_strategy_test.go  git.go  git_test.go  labels.go  labels_test.go  processing.go  processing_test.go  quickref.go  quickref_test.go  statistics.go  statistics_test.go  timeline.go  timeline_test.go
pkg/classification/: config.go  config_test.go  hybrid.go  hybrid_test.go  integration_test.go  rules.go  rules_test.go
pkg/components/: README.md  card.go  chartcontainer.go  header.go  statcard.go
pkg/config/: classification.go  classification_test.go
pkg/content/: auth.go  auth_test.go  classification_integration_test.go  conflict_resolver.go  conflict_resolver_test.go  errors.go  errors_test.go  file_manager.go  file_manager_test.go  generator.go  generator_test.go  git_client.go  github_pages_publisher.go  github_pages_publisher_test.go  navigation.go  navigation_test.go  performance.go  publisher.go  (+9 more)
public/: site.webmanifest  version.json
scripts/: build-astro-integrated.sh  build-integrated.sh  build-tools.sh  ci-beaver.sh  ci-checks.sh  ci-common.sh  fetch-github-data.ts  generate-version.js  release-builder.sh  run-integration-tests.sh  test-script-architecture.sh  validate-version.js
services/ai/: .env.example  Dockerfile  README.md  __init__.py  analytics.py  config.py  docker-compose.yml  main.py  main_enhanced.py  pattern_analyzer.py  patterns.py  pyproject.toml  pytest.ini  requirements.txt  start.sh  troubleshooting.py  wiki_intelligence.py
services/ai/ai_classification_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/ai/app/: __init__.py  main.py
services/ai/app/core/: ai_client.py  config.py  logging.py
services/ai/app/models/: __init__.py  schemas.py
services/ai/app/routers/: __init__.py  classification.py  health.py  summarization.py
services/ai/evaluation/: __init__.py  accuracy_evaluator.py
services/ai/models/: __init__.py  classification.py  topic_model.py
services/ai/services/: __init__.py  classifier.py  enhanced_classifier.py
services/ai/tests/: __init__.py  test_accuracy_evaluator.py  test_classifier.py  test_enhanced_classifier.py  test_main.py
src/: env.d.ts
tests/integration/python/: README.md  conftest.py  pyproject.toml  requirements.txt  test_cli_workflow.py  test_github_integration.py  test_site_generation.py
tests/integration/python/utils/: __init__.py  beaver_runner.py  github_verifier.py  site_checker.py
(+568 files in other folders)
