[project]
name = "beaver-integration-tests"
version = "1.0.0"
description = "Beaver統合テストスイート"
authors = [
    {name = "Beaver Team", email = "team@beaver.com"}
]
requires-python = ">=3.9"

dependencies = [
    "pytest>=7.4.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "click>=8.1.0",
    "beautifulsoup4>=4.12.0",
    "pytest-html>=3.2.0",
    "pytest-json-report>=1.5.0",
    "pytest-timeout>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"test_*.py" = ["B018"]  # Found useless expression in tests

# MyPy configuration
[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "bs4.*",
    "click.*",
]
ignore_missing_imports = true

# Pytest configuration  
[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "github_api: marks tests that require GitHub API access",
    "cli: marks tests that test CLI functionality",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.1",
]
